[package]
name = "bbs-accum"
description = "Rust implementation of the accumulator commitment scheme by Jutla et al"
repository = "https://github.com/sug0/bbs-accum"
license = "MIT"
version = "0.2.0"
edition = "2024"

[dependencies]
ff = { version = "0.13.1", default-features = false }
group = { version = "0.13.0", default-features = false }
pairing = { version = "0.23.0", default-features = false }
rand_core = "0.6.4"
subtle = { version = "2.6.1", default-features = false }

[dev-dependencies]
blstrs = "0.7.1"
rand_chacha = "0.3.1"
